--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,8 @@ body {
   background-color: var(--dark-color);
   overflow: hidden;
   perspective: 1000px;
+  position: hidden;
+  touch-action: nonel;
   /* Gradasi radial untuk efek kedalaman layar */
   background-image: radial-gradient(circle at center, #2b1d31 0%, #1a1a2e 100%);
 }
@@ -38,9 +40,12 @@ body {
   top: 0;
   transform: translateX(-50%);
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   filter: blur(0.1vmin);
   overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
   background-image: radial-gradient(
       ellipse at top,
       transparent 0%,
